# DoodleJump

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.circleci/: config.yml
SFML-2.5.1-MAC/: changelog.md
SFML-2.5.1-MAC/doc/: doxyfile.in
SFML-2.5.1-MAC/examples/X11/: X11.cpp  gl.h
SFML-2.5.1-MAC/examples/cocoa/: readme.txt
SFML-2.5.1-MAC/examples/ftp/: Ftp.cpp
SFML-2.5.1-MAC/examples/island/: stb_perlin.h
SFML-2.5.1-MAC/examples/opengl/: OpenGL.cpp
SFML-2.5.1-MAC/examples/pong/: Pong.cpp
SFML-2.5.1-MAC/examples/shader/: Effect.hpp
SFML-2.5.1-MAC/examples/sockets/: Sockets.cpp
SFML-2.5.1-MAC/examples/sound/: Sound.cpp
SFML-2.5.1-MAC/examples/vulkan/: Vulkan.cpp  vulkan.h
SFML-2.5.1-MAC/examples/win32/: Win32.cpp
SFML-2.5.1-MAC/examples/window/: Window.cpp
SFML-2.5.1-MAC/extlibs/headers/: catch.hpp
SFML-2.5.1-MAC/include/SFML/: Audio.hpp  Config.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  Window.hpp
SFML-2.5.1/include/SFML/: GpuPreference.hpp  Graphics.hpp  Network.hpp
SFML-2.5.1_WIN/doc/html/: Main_8hpp_source.html  RenderStates_8hpp_source.html  RenderTarget_8hpp_source.html  View_8hpp_source.html  classsf_1_1Clock.html  classsf_1_1Context.html  classsf_1_1Cursor.html  classsf_1_1Event.html  classsf_1_1Font.html  classsf_1_1Ftp.html  classsf_1_1Ftp_1_1Response.html  (+27 more)
doc/html/: AbstractFactory_8cpp_source.html  AbstractFactory_8h_source.html  BGTile_8cpp_source.html  BGTile_8h_source.html  BGTile__GR_8cpp_source.html  BGTile__GR_8h_source.html  Bonus_8cpp_source.html  Bonus_8h_source.html  Bonus__GR_8cpp_source.html  Bonus__GR_8h_source.html  Camera_8cpp_source.html  Camera_8h_source.html  ConcreteFactory_8cpp_source.html  ConcreteFactory_8h_source.html  EntityModel_8cpp_source.html  EntityModel_8h_source.html  EntityView_8cpp_source.html  EntityView_8h_source.html  Game_8cpp_source.html  Game_8h_source.html  Jetpack_8cpp_source.html  Jetpack_8h_source.html  Jetpack__GR_8cpp_source.html  Jetpack__GR_8h_source.html  LoadFileException_8cpp_source.html  LoadFileException_8h_source.html  Observer_8cpp_source.html  Observer_8h_source.html  Platform_8cpp_source.html  Platform_8h_source.html  Platform__GR_8cpp_source.html  Platform__GR_8h_source.html  Platform__Horizontal_8cpp_source.html  Platform__Horizontal_8h_source.html  Platform__Horizontal__GR_8cpp_source.html  Platform__Horizontal__GR_8h_source.html  Platform__Static_8cpp_source.html  Platform__Static_8h_source.html  Platform__Static__GR_8cpp_source.html  Platform__Static__GR_8h_source.html  (+279 more)
doc/latex/: annotated.tex  classLoadFileException.tex  classLoadFileException__inherit__graph.md5  classlogic_1_1AbstractFactory.tex  classlogic_1_1AbstractFactory__inherit__graph.md5  classlogic_1_1BGTile.tex  classlogic_1_1BGTile__inherit__graph.md5  classlogic_1_1Bonus.tex  classlogic_1_1Bonus__coll__graph.md5  classlogic_1_1Bonus__inherit__graph.md5  classlogic_1_1EntityModel.tex  classlogic_1_1EntityModel__coll__graph.md5  classlogic_1_1EntityModel__inherit__graph.md5  classlogic_1_1Jetpack.tex  classlogic_1_1Jetpack__inherit__graph.md5  classlogic_1_1Observer.tex  classlogic_1_1Observer__inherit__graph.md5  classlogic_1_1Platform.tex  classlogic_1_1Platform__Horizontal.tex  classlogic_1_1Platform__Horizontal__inherit__graph.md5  classlogic_1_1Platform__Static.tex  classlogic_1_1Platform__Static__coll__graph.md5  classlogic_1_1Platform__Temporary.tex  classlogic_1_1Platform__Temporary__coll__graph.md5  classlogic_1_1Platform__Vertical.tex  classlogic_1_1Platform__Vertical__coll__graph.md5  classlogic_1_1Platform__coll__graph.md5  classlogic_1_1Platform__inherit__graph.md5  classlogic_1_1Player.tex  classlogic_1_1Player__inherit__graph.md5  classlogic_1_1Score.tex  classlogic_1_1Score__inherit__graph.md5  classlogic_1_1Spring.tex  classlogic_1_1Spring__coll__graph.md5  classlogic_1_1Subject.tex  classlogic_1_1Subject__inherit__graph.md5  classlogic_1_1World.tex  classlogic_1_1utility_1_1Camera.tex  classlogic_1_1utility_1_1Random.tex  classlogic_1_1utility_1_1Stopwatch.tex  (+32 more)
doc/xml/: AbstractFactory_8cpp.xml  AbstractFactory_8h.xml  BGTile_8cpp.xml  BGTile_8h.xml  BGTile__GR_8cpp.xml  BGTile__GR_8h.xml  Bonus_8cpp.xml  Bonus_8h.xml  Bonus__GR_8cpp.xml  Bonus__GR_8h.xml  Camera_8cpp.xml  Camera_8h.xml  ConcreteFactory_8cpp.xml  ConcreteFactory_8h.xml  EntityModel_8cpp.xml  EntityModel_8h.xml  EntityView_8cpp.xml  EntityView_8h.xml  Game_8cpp.xml  Game_8h.xml  Jetpack_8cpp.xml  Jetpack_8h.xml  Jetpack__GR_8cpp.xml  Jetpack__GR_8h.xml  LoadFileException_8cpp.xml  LoadFileException_8h.xml  Observer_8cpp.xml  Observer_8h.xml  Platform_8cpp.xml  Platform_8h.xml  Platform__GR_8cpp.xml  Platform__GR_8h.xml  Platform__Horizontal_8cpp.xml  Platform__Horizontal_8h.xml  Platform__Horizontal__GR_8cpp.xml  Platform__Horizontal__GR_8h.xml  Platform__Static_8cpp.xml  Platform__Static_8h.xml  Platform__Static__GR_8cpp.xml  Platform__Static__GR_8h.xml  (+72 more)
src/: LoadFileException.cpp  LoadFileException.h  main.cpp
src/game_representation/: BGTile_GR.cpp  BGTile_GR.h  Bonus_GR.cpp  Bonus_GR.h  ConcreteFactory.cpp  ConcreteFactory.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  Jetpack_GR.cpp  Jetpack_GR.h  Platform_GR.cpp  Platform_GR.h  Platform_Horizontal_GR.cpp  Platform_Horizontal_GR.h  Platform_Static_GR.cpp  Platform_Static_GR.h  Platform_Temporary_GR.cpp  Platform_Temporary_GR.h  Platform_Vertical_GR.cpp  Platform_Vertical_GR.h  Player_GR.cpp  Player_GR.h  Spring_GR.cpp  Spring_GR.h  Window.cpp  Window.h
src/logic_library/: AbstractFactory.cpp  AbstractFactory.h  BGTile.cpp  BGTile.h  Bonus.cpp  Bonus.h  Camera.cpp  Camera.h  EntityModel.cpp  EntityModel.h  Jetpack.cpp  Jetpack.h  Observer.cpp  Observer.h  Platform.cpp  Platform.h  Platform_Horizontal.cpp  Platform_Horizontal.h  Platform_Static.cpp  Platform_Static.h  Platform_Temporary.cpp  Platform_Temporary.h  Platform_Vertical.cpp  Platform_Vertical.h  Player.cpp  Player.h  Random.cpp  Random.h  Score.cpp  Score.h  Spring.cpp  Spring.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  World.cpp  World.h
(+647 files in other folders)
